# Rower

./: .env.example  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  data.csv  rower.cpp  rower.h  rower.ino  rowerPresenter.h  rower_test.cc  webPresenter.cpp  webPresenter.h
.github/workflows/: Tests.yml
data/: index.html
lib/: rower.cpp  webPresenter.cpp  webPresenter.h
src/: aggregator.h  jsonPresenter.cpp  jsonPresenter.h  rower.cpp  rower.h  rowerPresenter.h  stringPresenter.h
test/: jsonPresenter_test.cc  rower_test.cc
web/: index.html  package-lock.json  package.json
web/scripts/: build.js
web/src/: App.css  App.js  index.css
web/src/components/: Changer.js  Entry.js
web/src/views/: Action.js  Setup.js
